--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.80.0",
-    "@react-three/fiber": "^8.13.6",
-    "framer-motion": "^10.15.0",
+    "@react-three/drei": "^9.83.9",
+    "@react-three/fiber": "^8.14.1",
+    "bootstrap": "^5.3.1",
+    "framer-motion": "^10.16.4",
     "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-parallax-tilt": "^1.7.155",
-    "react-router-dom": "^6.14.2",
+    "react-parallax-tilt": "^1.7.166",
+    "react-router-dom": "^6.16.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "reactstrap": "^9.2.0",
     "three": "^0.155.0"
   },
   "devDependencies": {
@@ -33,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
