--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-parallax-tilt": "^1.7.155",
     "react-router-dom": "^6.14.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "reactstrap": "^9.2.0",
     "three": "^0.155.0"
   },
   "devDependencies": {
